Refactor project tree loading and enhance configuration handling